fix scrollbar & mobile about popup

--- a/src/scss/projects/components/popups/about.scss
+++ b/src/scss/projects/components/popups/about.scss
@@ -1,8 +1,21 @@
 .popup {
   &[data-popup="about"] {
-    @media (max-width: 768px) {
-      padding-bottom: 50px;
+   .popup__wrapper{
+    padding-bottom: 60px;
+    @media(max-width:768px){
+      padding-bottom: 100px;
+
     }
+   }
+   .popup-container{
+    padding-bottom: 0;
+   }
+   .cta-about__container{
+    padding-right: 56px;
+    @media(max-width:768px){
+      padding-right: 0;
+    }
+   }
   }
 }
 
@@ -252,7 +265,9 @@
 
 //========================================================================================================================================================
 .cta-about {
-  padding-bottom: 40px;
+  @media (max-width: 768px) {
+    // padding-bottom: 40px;
+  }
   // .cta-about__wrapper
 
   &__wrapper {
